Agregados los escenarios faltantes para tener 5 automatizados y 5 manuales

--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -13,4 +13,8 @@ webdriver {
         "incognito", "disable-infobars", "disable-gpu", "disable-default-apps", "disable-popup-blocking"]
     }
   }
+  timeouts {
+      implicitlywait = 10000
+      fluentwait = 10000
+  }
 }
